@@ -70,11 +70,12 @@ champ.process <- function(runload=TRUE,
         message("\nRunning champ.load()...")
         myLoad <- champ.load(directory=directory,
                              methValue="B",
+                             autoimpute=TRUE,
                              filterXY=myfilter["XY"],
                              filterDetP=myfilter["DetP"],
-                             detSamplecut=0.1,
+                             ProbeCutoff=0,
+                             SampleCutoff=0.1,
                              detPcut=0.01,
-                             removeDetP = 0,
                              filterBeads=myfilter["Beads"],
                              beadCutoff=0.05,
                              filterNoCG=myfilter["NoCG"],
