@@ -1,6 +1,15 @@
 \name{champnews}
 \title{ChAMP News}
 \encoding{UTF-8}
+
+\section{Version 2.6.5}
+{
+\itemize{
+    \item Added impute option for champ.load().
+    \item Add ProbeCutoff and SampleCutoff parameters in champ.load().
+    }
+}
+
 \section{Version 2.6.2}{
 \itemize{
     \item DMRcate pacakge get updated, Error like "Error in if (nsig == 0) { : missing value where TRUE/FALSE needed" has been solved.
@@ -8,5 +17,6 @@
     \item Fixed warnings() in GUI() functions.
     \item In champ.runCombat() function, removed restriction on factors like Sample_Group. Also, added "variable" parameter so that user may assign other variables other then "Sample_Group".
     \item Modified champ.DMR() function, for ProbeLasso, there is no need to input myDMP anymore, ProbeLasso function would calculate inside the function.
+    \item Added Demo on github.
     }
 }
